# emca

./: README.md  emca.py  requirements.txt
Controller/: controller.py  controller_detector.py  controller_filter.py  controller_scene.py  controller_stream.py
Core/: hdr_graphics_view_base.py  hdr_image.py  highlighter_base.py  logger.py  messages.py  plot_2d_base.py  plot_2d_highlighter.py  plot_3d_base.py  plot_3d_highlighter.py  plot_figure_base.py  plot_rgb_base.py  plot_rgb_highlighter.py  plugin.py  render_interface.py  scene_interface.py  socket_stream.py  socket_stream_backend.py  socket_stream_client.py  stream.py  tool.py
CustomData/: __init__.py  custom_data_base.py  custom_data_handler.py  custom_data_test.py
Detector/: detector.py
Filter/: filter.py  filter_list_item.py  filter_settings.py
Handler/: tool_container.py  tool_handler.py
Model/: camera_data.py  contribution_data.py  dataset.py  detector.py  filter.py  mesh_data.py  model.py  options_data.py  path_data.py  pixel_info.py  plot_data.py  render_data.py  render_info.py  user_data.py  vertex_data.py
Parser/: xml_parser.py
Plugins/: __init__.py
PluginsHandler/: plugins_handler.py  plugins_view_container.py
Renderer/: camera.py  interactor_mouse.py  interactor_rubberband.py  intersection.py  line.py  mesh.py  meshes.py  path.py  path_vertex.py  ray.py  renderer.py  rubberband.py  scene_geometry.py  scene_renderer.py  scene_traced_paths.py  shape.py  sphere.py  triangle.py  vertex.py
Resources/: options.ini
Tools/: __init__.py
server/example/smallpt/: CMakeLists.txt  smallpt.cpp
(+211 files in other folders)
